--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,74 @@
-$primary-color: blue;
+@import 'config';
+* {
+    box-sizing: border-box;
+}
 
 body {
-    background-color: $primary-color;
+    @include background;
+    background-color: $primary-bg-color;
+    color: $primary-text-color;
+    height: 100%;
+    margin: 0;
+    font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1.5;
+}
+
+main {
+    padding: 4rem;
+    height: 100%;
+
+    .icons {
+        margin-top: 1rem;
+
+        a {
+            padding: 0.4rem;
+
+            &:hover {
+                color: $secondary-color;
+                @include easeOut();
+            }
+        }
+    }
+
+    &#home {
+        overflow: hidden;
+
+        h1 {
+            margin-top: 20vh;
+        }
+    }
+}
+
+header {
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+}
+
+// Headings
+h1, h2, h3 {
+    margin: 0;
+    font-weight: 400;
+
+    &.lg-heading {
+        font-size: 6rem;
+        &.text-secondary {
+            color: $secondary-color;
+        }
+    }
+
+    &.sm-heading {
+        margin-bottom: 2rem;
+        padding: 0.2rem 1rem;
+        background: rgba(lighten($primary-bg-color,2), 0.5);
+    }
+}
+
+a {
+    color: $primary-text-color;
+    text-decoration: none;
+}
+
+.text-secondary {
+    color: $secondary-color;
 }
