--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -38,3 +38,106 @@
         }
     }
 }
+
+// Menu Overlay
+
+.menu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    visibility: hidden;
+
+    &.show {
+        visibility: visible;
+    }
+
+    &-branding, &-nav {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+        float: left;
+        width: 50%;
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    // Branding Side
+    &-branding {
+        margin: 0;
+        padding: 0;
+        background: $primary-bg-color;
+        list-style: none;
+        transform: translate3d(0,100%,0);
+        @include easeOut;
+
+        &.show {
+            transform: translate3d(0,0,0);
+        }
+
+        .portrait {
+            width: 250px;
+            height: 250px;
+            background: url('../img/portrait-med.jpg');
+            background-position: 50% 20%; 
+            background-repeat: no-repeat;
+            background-size: cover;
+            border-radius: 50%;
+            border: solid 3px $secondary-color;
+        }
+    }
+    
+    // Nav Side
+    &-nav {
+        margin: 0;
+        padding: 0;
+        background: darken($primary-bg-color, 5);
+        list-style: none;
+        transform: translate3d(0,-100%,0);
+        @include easeOut;
+
+        &.show {
+            transform: translate3d(0,0,0);
+        }
+    }
+
+    .nav-item {
+        transform: translate3d(600px,0,0);
+        @include easeOut;
+
+        &.show {
+            transform: translate3d(0,0,0);
+        }
+
+        &.current > a {
+            color: $secondary-color;
+        }
+    }
+
+    .nav-link {
+        display: inline-block;
+        position: relative;
+        font-size: 30px;
+        text-transform: uppercase;
+        padding: 1rem 0;
+        font-weight: 300;
+        color: $primary-text-color;
+        text-decoration: none;
+        @include easeOut;
+
+        &:hover {
+            color: $secondary-color;
+        }
+
+
+    }
+}
+
+// Delay nav-item sliding
+
+@for $i from 1 through 4 {
+    .nav-item:nth-child(#{$i}) {
+        transition-delay: $i * 0.1s;
+    }
+}
+
