about.html template setup

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -11,7 +11,7 @@
         width: 28px;
         height: 3px;
         margin: 0 0 5px 0;
-        background: #fff;
+        background: set-text-color($primary-color);
         @include easeOut;
     }
 
@@ -66,7 +66,7 @@
     &-branding {
         margin: 0;
         padding: 0;
-        background: $primary-bg-color;
+        background: $primary-color;
         list-style: none;
         transform: translate3d(0,100%,0);
         @include easeOut;
@@ -91,7 +91,7 @@
     &-nav {
         margin: 0;
         padding: 0;
-        background: darken($primary-bg-color, 5);
+        background: darken($primary-color, 5);
         list-style: none;
         transform: translate3d(0,-100%,0);
         @include easeOut;
@@ -121,7 +121,7 @@
         text-transform: uppercase;
         padding: 1rem 0;
         font-weight: 300;
-        color: $primary-text-color;
+        color: set-text-color($primary-color);
         text-decoration: none;
         @include easeOut;
 
