--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,5 @@
-$primary-bg-color: rgb(28, 50, 120);
+$primary-color: rgb(28, 50, 120);
 $secondary-color: #f0e110;
-$primary-text-color: #fff;
 $show-home-image: true;
 $home-image: url(../img/bg.jpg);
 $background-opacity: 0.5;
@@ -24,12 +23,23 @@ $background-opacity: 0.5;
                 width: 100%;
                 height: 100%;
                 z-index: -1;
-                background: rgba($primary-bg-color, $background-opacity);
+                background: rgba($primary-color, $background-opacity);
             }
-        }
-        
+        }   
     }
 }
+
+// Functions
+@function set-text-color($color) {
+    @if(lightness($color) > 40) {
+        @return #000;
+    }
+    @else {
+        @return #fff;
+    }
+}
+
+// Media Queries 
 
 @mixin mediaSm {
     @media screen and (max-width:500px) {
