--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 @import 'config';
 @import 'menu';
-@import 'mobile';
+
 
 * {
     box-sizing: border-box;
@@ -8,17 +8,17 @@
 
 body {
     @include background;
-    background-color: $primary-bg-color;
-    color: $primary-text-color;
+    background: $primary-color;
+    color: set-text-color($primary-color);
     height: 100%;
     margin: 0;
-    font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.5;
 }
 
 main {
     padding: 4rem;
-    height: 100%;
+    min-height: calc(100vh - 60px);
 
     .icons {
         margin-top: 1rem;
@@ -55,23 +55,70 @@ h1, h2, h3 {
 
     &.lg-heading {
         font-size: 6rem;
-        &.text-secondary {
-            color: $secondary-color;
-        }
     }
 
     &.sm-heading {
         margin-bottom: 2rem;
         padding: 0.2rem 1rem;
-        background: rgba(lighten($primary-bg-color,2), 0.5);
+        background: rgba(lighten($primary-color,2), 0.5);
     }
 }
 
 a {
-    color: $primary-text-color;
+    color: set-text-color($primary-color);
     text-decoration: none;
 }
 
 .text-secondary {
     color: $secondary-color;
 }
+
+#main-footer {
+    text-align: center;
+    padding: 1rem;
+    background: darken($primary-color, 10);
+    color: set-text-color($primary-color);
+}
+
+// Grid for about.html
+
+.about-info {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-areas: 
+    'bioimage bio bio'
+    'job1 job2 job3';
+    grid-template-columns: repeat(3,1fr);
+
+    .bio-image {
+        grid-area: bioimage;
+        margin: auto;
+        border-radius: 50%;
+        border: solid 3px $secondary-color;
+    }
+    
+    .bio {
+        grid-area: bio;
+        font-size: 1.5rem;
+    }
+    
+    .job-1 {
+        grid-area: job1;
+    }
+    
+    .job-2 {
+        grid-area: job2;
+    }
+    
+    .job-3 {
+        grid-area: job3;
+    }
+
+    .job {
+        background: lighten($primary-color,5);
+        padding: 0.5rem;
+        border-bottom: $secondary-color 5px solid;
+    }
+}
+
+@import 'mobile';
