--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,11 +1,15 @@
 // Wide screens
 @include mediaXLg {
-
+    .projects {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 // Desktops & Laptops 
 @include mediaLg {
-
+    .projects {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 // Tablets & Small Laptop 
@@ -97,12 +101,28 @@
           'ed4';  
         grid-template-columns: 1fr;
     }
+
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 // Smartphones
 @include mediaSm {
-    main#home h1 {
-        margin-top: 10vh;
+    main {
+        padding: 2rem;
+        #home h1 {
+          margin-top: 10vh;
+        }
+    
+        .lg-heading {
+          margin-top:1rem;
+          font-size: 5rem;
+        }
+    }
+
+    .projects {
+        grid-template-columns: 1fr;
     }
 }
 
