--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -38,6 +38,7 @@
         transform: translate3d(100%,0,0);
         height: 75vh;
         font-size: 20px;
+        overflow: hidden;
     }
 
     .menu-branding {
