--- a/css/main.css
+++ b/css/main.css
@@ -320,7 +320,7 @@ a {
     transform: translate3d(100%, 0, 0);
     height: 75vh;
     font-size: 20px;
-    overflow: none; }
+    overflow: hidden; }
   .menu-branding {
     transform: translate3d(-100%, 0, 0);
     height: 25vh; }
