--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -18,9 +18,14 @@
         align-items: center;
         text-align: center;
         
-        .lg-heading {
-            line-height: 1;
-            margin-bottom: 1rem;
+
+        h1 {
+
+            &.lg-heading {
+                line-height: 1;
+                margin-bottom: 1rem;
+                font-size: 4rem;
+            }
         }
     }
 
@@ -38,7 +43,6 @@
         transform: translate3d(100%,0,0);
         height: 75vh;
         font-size: 20px;
-        overflow: hidden;
     }
 
     .menu-branding {
