small change in font sizing on job & ed headers

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -110,6 +110,12 @@
     .projects {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .job, .ed {
+        h5 {
+            font-size: 10px;
+        }
+    }
 }
 
 // Smartphones
