--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -116,6 +116,30 @@
             font-size: 10px;
         }
     }
+
+    .project-img {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    
+    .project-details {
+        .project-links {
+            display: flex;
+            flex-direction: column;
+        }
+    
+        .project-screenshots {
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            justify-content: center;
+        }
+    }
+    
+    .screenshot {
+        width: 100%;
+        margin-bottom: 10px;
+    }
 }
 
 // Smartphones
@@ -134,6 +158,11 @@
 
     .projects {
         grid-template-columns: 1fr;
+
+        .item {
+            background: lighten($primary-color, 5);
+            border-bottom: solid 3px $secondary-color;
+        }
     }
 }
 
